# mcp-security-by-example

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  compose.yaml  rbac_model.conf
src/: auth.rs  authz.rs  db.rs  domain.rs  lib.rs  main.rs  request_pipeline.rs  scenarios.rs  server.rs  simulation.rs
src/guards/: command.rs  mod.rs  prompt_injection.rs  secrets.rs  ssrf.rs
tests/: authz.rs  guards.rs  mcp_denied.rs
