[package]
name = "mcp-security-by-example"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[lib]
name = "mcp_security_by_example"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "driver"
path = "src/main.rs"

[dependencies]
# MCP SDK: server + client, stdio + child-process transports, tool macros, schemars bridge.
rmcp = { version = "1.7", features = [
    "server",
    "client",
    "transport-io",
    "transport-child-process",
    "macros",
    "schemars",
] }

# FSM workflow engine (used at two levels: top-level driver loop + per-request pipeline).
cano = "0.14"

# RBAC enforcement + Postgres policy adapter. rustls only (no native-tls/OpenSSL system dep).
casbin = "2.20"
sqlx-adapter = { version = "1.8", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
] }

# Direct DB access for the `documents` table. Pinned to 0.8 to unify with sqlx-adapter's sqlx.
sqlx = { version = "0.8", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
] }

tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "io-std",
    "process",
    "sync",
    "io-util",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
regex = "1"
url = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
